Update NodeDetailView.java